# EllipticiPy

./: LICENSE  README.md  ellipticity_correction.py  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
ELCOR_replacement/: README.md
examples/: example_Mars.ipynb  example_get_corrections.ipynb
src/: ellip  ellipticity_of_figure.ipynb  example_0.ipynb  example_Mars.ipynb  example_coefficients.ipynb  example_corrections.ipynb  example_get_corrections.ipynb
src/ellipticipy/: __init__.py  main.py  tools.py
src/ellipticity/: __init__.py  main.py  tools.py
src/ellipticity/epsilon/: epsilon_ak135.txt  epsilon_iasp91.txt  epsilon_mars1.txt  epsilon_prem.txt
src/example_ellipticity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mars_model/: mars1.npz
src/test/: test_ellipticity_coefficients.py  test_ellipticity_correction.py  test_epsilon.py
