[metadata]
name = example_ellipticity
version = 0.9
author = Stuart Russell, John F Rudge, Jessica C. E. Irving, Sanne Cottaar
author_email = sr895@cam.ac.uk
description = Package for the calculation of ellipticity corrections
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StuartJRussell/ellipticity
project_urls =
    Bug Tracker = https://github.com/StuartJRussell/ellipticity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    numpy
    obspy
    scipy

[options.packages.find]
where = src 

