[metadata]
name = ellipticipy
version = 0.9.1
author = Stuart Russell, John F. Rudge, Jessica C. E. Irving, Sanne Cottaar
author_email = sr895@cam.ac.uk
description = Package for the calculation of ellipticity corrections for teleseismic waves
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StuartJRussell/EllipticiPy
project_urls =
    Bug Tracker = https://github.com/StuartJRussell/EllipticiPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = ellipticipy
python_requires = >=3.6
include_package_data = True
install_requires =
    numpy
    obspy
    scipy

[options.packages.find]
where = src 

